.xmonad/xmonad.errors

xmonad.hs:36:22: error:
    lexical error in string/character literal at character '\62057'
   |
36 | myWorkspaces = ["1","","3","4","5","6","7","",""]
   |                      ^
